Fix for keeping edit actions dropdown visible
Makes sure the dropdown from the last post fully visible above the reply form

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -168,12 +168,13 @@ nav#object-nav li.bfc-group-name-nav{
 	list-style-type: none;
 }
 
-.bs-dropdown {
+/* .bs-dropdown {
 	min-width: 100px;
- }
+ } */
  
  #bbpress-forums#bbpress-forums .bs-forums-items.list-view .bs-dropdown-wrap .bs-dropdown-wrap-inner .bs-dropdown {
    width: 100px;
+   z-index: 1000;
 }
 
 
